conjure-typescript/src/test/resources/errors/expected/@palantir/product/index.ts
export { IInvalidServiceDefinition, IInvalidTypeDefinition, IJavaCompilationFailed } from "@palantir/product/errors";
